--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <center>
       <h1>Its party time!</h1>
-      <img src="/party.jpg" alt="partytime">
+      <img src="/party.jpg" alt="partytime" width="600" ">
     </center>
   </body>
 </html>
