--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <center>
-      <h1>Its party time!</h1>
+      <h1><blink>Its party time!</blink></h1>
       <img src="/party.jpg" alt="partytime" width="600" ">
     </center>
   </body>
