--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fabian Sörqvist</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.css" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
      * {
        box-sizing: border-box;
